fix(list): Let horizontal (divided) wrap nicely on small screens

--- a/src/definitions/elements/list.less
+++ b/src/definitions/elements/list.less
@@ -291,12 +291,12 @@ ol.ui.list ol li,
 }
 .ui.horizontal.list > .item {
   display: inline-block;
-  margin-left: @horizontalSpacing;
+  margin-right: @horizontalSpacing;
   font-size: 1rem;
 }
-.ui.horizontal.list:not(.celled) > .item:first-child {
-  margin-left: 0 !important;
-  padding-left: 0 !important;
+.ui.horizontal.list:not(.celled) > .item:last-child {
+  margin-right: 0;
+  padding-right: 0;
 }
 .ui.horizontal.list .list:not(.icon) {
   padding-left: 0;
@@ -749,7 +749,7 @@ ol.ui.horizontal.list li:before,
 .ui.divided.horizontal.list {
   margin-left: 0;
 }
-.ui.divided.horizontal.list > .item:not(:first-child) {
+.ui.divided.horizontal.list > .item {
   padding-left: @horizontalDividedSpacing;
 }
 .ui.divided.horizontal.list > .item:not(:last-child) {
@@ -757,12 +757,12 @@ ol.ui.horizontal.list li:before,
 }
 .ui.divided.horizontal.list > .item {
   border-top: none;
-  border-left: @dividedBorder;
+  border-right: @dividedBorder;
   margin: 0;
   line-height: @horizontalDividedLineHeight;
 }
-.ui.horizontal.divided.list > .item:first-child {
-  border-left: none;
+.ui.horizontal.divided.list > .item:last-child {
+  border-right: none;
 }
 /* Inverted */
 .ui.divided.inverted.list > .item,
